<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- mvn help:effective-pom -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.mbeier1406</groupId>
	<artifactId>howto</artifactId>
	<version>0.0.7-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>Kleine Java-Tutorials</description>
	<url>https://github.com/mbeier1406/howto</url>
	<inceptionYear>2020</inceptionYear>
	

	<developers>
		<developer>
			<id>mbeier1406</id>
			<name>Martin Beier</name>
			<email>Martin.Beier@gmx.de</email>
			<url>http://www.golkonda.gmxhome.de/</url>
			<organization>None</organization>
			<organizationUrl>https://github.com/mbeier1406/</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
	  <connection>scm:git:git://github.com/mbeier1406/howto.git</connection>
	  <developerConnection>scm:git:ssh://github.com/mbeier1406/howto.git</developerConnection>
	  <url>http://github.com/mbeier1406/howto</url>
	  <tag>HEAD</tag>
  	</scm>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.apache.logging.log4j.version>2.17.1</org.apache.logging.log4j.version>
		<org.hamcrest.version>1.3</org.hamcrest.version>
		<org.junit.version>5.5.2</org.junit.version>
	    <jacoco.version>0.8.6</jacoco.version>
	    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
	    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
	    <sonar.language>java</sonar.language>
	    <maven.compiler.source>19</maven.compiler.source>
	    <maven.compiler.target>19</maven.compiler.target>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>19</source>
					<target>19</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<localCheckout>true</localCheckout>
					<pushChanges>false</pushChanges>
					<mavenExecutorId>forked-path</mavenExecutorId>
					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.5</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
<!--			<plugin>
				<!- - mvn -X org.jacoco:jacoco-maven-plugin:report - ->
			    <groupId>org.jacoco</groupId>
			    <artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
			    <executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
			        <execution>
			            <id>jacoco-report</id>
			            <phase>package</phase>
			            <goals>
			                <goal>report</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>-->
		</plugins>
	</build>

	<modules>
		<module>jse</module>
		<module>jee</module>
		<module>jpa</module>
		<module>rest-server</module>
		<module>ausbildung</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
		    <dependency>
		      <groupId>org.junit</groupId>
		      <artifactId>junit-bom</artifactId>
		      <version>${org.junit.version}</version>
		      <type>pom</type>
		      <scope>import</scope>
		    </dependency>
			<dependency>
			    <groupId>org.hamcrest</groupId>
			    <artifactId>hamcrest-all</artifactId>
			    <version>${org.hamcrest.version}</version>
			    <scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>3.8.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${org.apache.logging.log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${org.apache.logging.log4j.version}</version>
			</dependency>
	        <dependency>
	            <groupId>org.jboss.arquillian</groupId>
	            <artifactId>arquillian-bom</artifactId>
	            <version>1.6.0.Final</version>
	            <scope>import</scope>
	            <type>pom</type>
	        </dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.jacoco</groupId> 
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>${jacoco.version}</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>xml-apis</groupId>
		    		<artifactId>xml-apis</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
